# anitransfer

./: .gitignore  .mypy.ini  README.md  anitransfer.py  bad-manga.csv  bad.csv  cache-manga.csv  cache.csv  convert.xml  index.html  jdata.json  log.txt  mangatransfer.py  pyproject.toml
mappings/: anime_bad.csv  anime_cache.csv  anime_unmapped.csv  manga_cache.csv
samples/: animelist_1596418113_-_5916566.xml  export-anime-GhostLyrics.json  export-anime-NorthS.json  export-anime-ReginReads.json  export-anime-SomePoorKid.json  export-anime-StephNyan.json  export-anime-aztech101.json  export-anime-crandor94.json  export-anime-princessdaisy41_2.json
utils/: caches.py  exporters.py  statistics.py  utils.py
